# snntorch

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  DVSGesture_SNNTutorial.ipynb  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _version.py  baseline.prof  batch_flag.ipynb  bench_inference_time_and_memory_multichannel.py  dataloader.py  network_test.py  output-2025-10-31-17-26-18.txt  output-2025-10-31-17-42-00.txt  output-2025-10-31-17-55-00.txt  output-2025-10-31-17-59-07.txt  output-2025-10-31-18-06-36.txt  output-2025-10-31-18-26-05.txt  output-2025-11-18-14-23-24.txt  output-2025-11-18-14-26-56.txt  output-2025-11-18-14-29-43.txt  output-2025-11-18-17-24-31.txt  output-2025-11-18-17-26-28.txt  output-2025-11-18-20-19-16.txt  output-2025-11-18-20-24-52.txt  output-2025-11-18-20-25-56.txt  output-2025-11-18-20-26-34.txt  output-2025-11-18-20-27-43.txt  output-2025-11-18-20-33-34.txt  output-2025-11-18-20-37-49.txt  output-2025-11-18-20-42-11.txt  output-2025-11-18-20-53-55.txt  output-2025-11-18-21-24-03.txt  (+67 more)
.github/: ISSUE_TEMPLATE.md  agent-helper-auth-test-20250824-011311.txt
docs/: Makefile  conf.py  contents.rst  examples.rst  index.rst  installation.rst  make.bat  modules.rst  quickstart.rst  requirements.txt  snn.neurons_lapicque.rst  snn.neurons_leakyparallel.rst  snn.neurons_rleaky.rst  snn.neurons_sconv1dlstm.rst  snn.neurons_sconvlstm.rst  snn.neurons_synaptic.rst  snntorch.backprop.rst  snntorch.export_nir.rst  snntorch.functional.rst  snntorch.import_nir.rst  snntorch.rst  usage.rst  (+7 more)
(+415 files in other folders)
